--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "H5mag",
-  "version": "0.1.3",
+  "name": "H5Converter",
+  "version": "1.0",
   "engines": {
     "sketch": ">=3.0"
   },
   "skpm": {
-    "name": "H5mag",
+    "name": "H5Converter",
     "manifest": "src/manifest.json",
     "main": "h5mag.sketchplugin",
     "assets": [
@@ -32,5 +32,5 @@
     "keychain": "^1.3.0",
     "sketch-module-web-view": "^3.1.4"
   },
-  "author": "Liso Tunali <liso.tunali@h5mag.com>"
+  "author": "H5mag team"
 }
