--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "keychain": "^1.3.0",
     "sketch-module-web-view": "^3.1.4"
   },
-  "author": "H5mag team"
+  "author": "H5mag team",
+  "repository": "https://github.com/h5mag/sketch-h5converter"
 }
